# aivan_bot

./: .dockerignore  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  ci_cd.yml
aivan_bot/: bot.py  settings.py
aivan_bot/handlers/: base.py  chat.py  transcript.py
aivan_bot/utils/: groq_functions.py
bot/: bot.py  config.py
bot/filters/: __init__.py  filters.py
bot/handlers/: base.py  chat.py  speech.py  vision.py
bot/keyboards/: __init__.py  base_keyboards.py
bot/middlewares/: __init__.py  auth.py
bot/utils/: __init__.py  groq_functions.py
