[project]
name = "aivan-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13.1",
    "groq>=0.11.0",
    "loguru>=0.7.2",
    "pydantic-settings>=2.6.0",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pip>=24.2",
]
